--- a/ProductsAPI.Repository/ProductsAPI.Repository.csproj
+++ b/ProductsAPI.Repository/ProductsAPI.Repository.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ProductAPI.DataAccess\ProductsAPI.DataAccess.csproj" />
+    <ProjectReference Include="..\ProductsAPI.DataAccess\ProductsAPI.DataAccess.csproj" />
   </ItemGroup>
 
 </Project>
